config-root/namespaces/jx-staging/camunda-cloud-go-client/camunda-cloud-go-client-camunda-cloud-go-client-deploy.yaml
# Source: camunda-cloud-go-client/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-cloud-go-client-camunda-cloud-go-client
  labels:
    draft: draft-app
    chart: "camunda-cloud-go-client-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: camunda-cloud-go-client-camunda-cloud-go-client
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: camunda-cloud-go-client-camunda-cloud-go-client
    spec:
      serviceAccountName: camunda-cloud-go-client-camunda-cloud-go-client
      containers:
        - name: camunda-cloud-go-client
          image: "gcr.io/camunda-researchanddevelopment/camunda-cloud-go-client:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
