config-root/namespaces/jx-staging/camunda-cloud-go-client/camunda-cloud-go-client-svc.yaml
# Source: camunda-cloud-go-client/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-cloud-go-client
  labels:
    chart: "camunda-cloud-go-client-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: camunda-cloud-go-client-camunda-cloud-go-client
